Working on USB.

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -2,13 +2,22 @@ idf_component_register(
     SRCS
         "main.cpp"
         "FPGA.cpp"
-        "USBHost.cpp"
         "AqKeyboard.cpp"
         "AqUartProtocol.cpp"
+
+        "USB/USBHost.cpp"
+        "USB/USBDevice.cpp"
+        "USB/USBInterface.cpp"
+        "USB/USBInterfaceHID.cpp"
 
         "VFS/VFS.cpp"
         "VFS/SDCardVFS.cpp"
         "VFS/EspVFS.cpp"
+
+        "HID/HIDReportDescriptor.cpp"
+        "HID/HIDReportHandler.cpp"
+        "HID/HIDReportHandlerKeyboard.cpp"
+        "HID/HIDReportHandlerMouse.cpp"
 
         "EspSettingsConsole.cpp"
 
@@ -45,6 +54,8 @@ idf_component_register(
     INCLUDE_DIRS
         "."
         "VFS"
+        "HID"
+        "USB"
         "NimBLE_Cpp"
 
     REQUIRES
