Working on HID.

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -18,6 +18,7 @@ idf_component_register(
         "HID/HIDReportHandler.cpp"
         "HID/HIDReportHandlerKeyboard.cpp"
         "HID/HIDReportHandlerMouse.cpp"
+        "HID/HIDReportHandlerGamepad.cpp"
 
         "EspSettingsConsole.cpp"
 
