Renaming non-BASIC executables to AQX extension.

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -85,7 +85,7 @@ idf_component_register(
 
     EMBED_FILES
         "../../fpga/top.bit"
-        "../../rom_src/settings/build/settings.caq"
+        "../../rom_src/settings/build/settings.aqx"
 
     EMBED_TXTFILES
         "Assets/root_certificates"
