Replacing esp-nimble-cpp with own code.

--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -15,3 +15,5 @@ dependencies:
   #   # `public` flag doesn't have an effect dependencies of the `main` component.
   #   # All dependencies of `main` are public by default.
   #   public: true
+  nimble_central_utils:
+    path: ${IDF_PATH}/examples/bluetooth/nimble/common/nimble_central_utils
