--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -1,9 +1,9 @@
 ## IDF Component Manager Manifest File
 dependencies:
-  espressif/mdns: "^1.0.9"
+  espressif/xz: "==1.0.0"
   ## Required IDF version
   idf:
-    version: ">=4.1.0"
+    version: ">=5.3.1"
   # # Put list of dependencies here
   # # For components maintained by Espressif:
   # component: "~1.0.0"
@@ -15,5 +15,3 @@ dependencies:
   #   # `public` flag doesn't have an effect dependencies of the `main` component.
   #   # All dependencies of `main` are public by default.
   #   public: true
-  nimble_central_utils:
-    path: ${IDF_PATH}/examples/bluetooth/nimble/common/nimble_central_utils
