--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,6 +1,7 @@
 idf_component_register(
     SRCS
         "main.cpp"
+        "Common.cpp"
         "FPGA.cpp"
         "WiFi.cpp"
         "Bluetooth.cpp"
