--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -34,6 +34,7 @@ idf_component_register(
         "fatfs/ffunicode.c"
 
         "UartProtocol.cpp"
+        "VFS/VFS.cpp"
         "VFS/EspVFS.cpp"
         "VFS/SDCardVFS.cpp"
         "VFS/HttpVFS.cpp"
